@@ -1,6 +1,6 @@
 Package: RcppDE
-Version: 0.1.6
-Date: 2018-06-09
+Version: 0.1.6.1
+Date: 2019-09-24
 Title: Global Optimization by Differential Evolution in C++
 Author: Dirk Eddelbuettel extending DEoptim (by David Ardia, Katharine Mullen,
  Brian Peterson, Joshua Ulrich) which itself is based on DE-Engine (by Rainer Storn)
